argocd/apps/infra/monitoring/victoria-metrics/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: monitoring-app
  name: vm-httproute
  namespace: monitoring
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - vmk8s.yanello.net
  rules:
    - backendRefs:
        - name: vmsingle-victoria-metrics-k8s-stack
          namespace: monitoring
          port: 8429
